implemented property binding

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,3 @@
-<p>This is component selector</p>
+<!-- <p>This is component selector</p> -->
+<!-- <p>{{ 'Server' }} with id  {{ serverId }}  is  {{ status }} </p> -->
+<p>{{ 'Server' }} with id  {{ serverId }}  is  {{ getstatus() }} </p>
