--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,7 @@
 <p>Server Name</p>
-<input type="text" class="form-control" (input)="createserver($event)">
-<p>{{ servername }}</p>
+<!-- <input type="text" class="form-control" (input)="createserver($event)"> -->
+<input type="text" class="form-control" [(ngModel)]="servername">
+<!-- <p>{{ servername }}</p> -->
 <button class="btn btn-primary" [disabled] = "!allowNewServer" (click)="onservercreation()">
     Add server
 </button>
