implemented ngif else

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -7,6 +7,9 @@
 </button>
 <!-- <p>{{ allowNewServer }}</p> -->
 <!-- <p [innerText]="allowNewServer" ></p> -->
-<p *ngIf="servercreated">{{ createserverstatus }}</p>
+<p *ngIf="servercreated; else noServer" >Server was created, with the name {{ servername }}</p>
+<ng-template #noServer>
+    <p>No server was created.</p>
+</ng-template>
 <app-server></app-server>
 <app-server></app-server>
