--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,8 @@
+<app-header></app-header>
 <div class="container">
     <div class="row">
-        <div class="col-xs-12">
-            <h3>I am learning Angular</h3>
-            <hr>
-            <app-servers></app-servers>
-            <!-- <div app-servers ></div> -->
-            <!-- <div class="app-servers" ></div> -->
-            <!-- <div id="app-servers" ></div> -->
+        <div class="col-md-12">
+            <p>I am working.</p>
         </div>
     </div>
 </div>
