--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -14,8 +14,9 @@
                 <p class="list-gorup-item-text" >{{ recipe.description }}</p>
             </div>
             <span class="pull-right" >
-                <img src="{{recipe.imagePath}}" alt="{{ recipe.name }}" class="img-responsive" style="max-height: 50px;">
-                <img [src]="recipe.imagePath" alt="" class="img-responsive" style="max-height: 50px;">
+                
+                <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive" style="max-height: 50px;">
+                <!-- <img [src]="recipe.imagePath" alt="" class="img-responsive" style="max-height: 50px;"> -->
             </span>
         </a>
         <app-recipe-item></app-recipe-item>
